//      
const jspb = require('google-protobuf');


                                            
                                                                   
                                                                
                                                                
                                                                
                                                                   
                                                                   
                                                                   
                                                                   
                                                                      
                                                                       
                                                                          
                                                                          
                                                               
                                                                    
                                                                     
 


class RepeatedPrimitiveTest {
  #doubleField               ;  // repeated double double_field = 1;
  #floatField               ;  // repeated float float_field = 2;
  #int32Field               ;  // repeated int32 int32_field = 3;
  #int64Field               ;  // repeated int64 int64_field = 4;
  #uint32Field               ;  // repeated uint32 uint32_field = 5;
  #uint64Field               ;  // repeated uint64 uint64_field = 6;
  #sint32Field               ;  // repeated sint32 sint32_field = 7;
  #sint64Field               ;  // repeated sint64 sint64_field = 8;
  #fixed32Field               ;  // repeated fixed32 fixed32_field = 9;
  #fixed64Field               ;  // repeated fixed64 fixed64_field = 10;
  #sfixed32Field               ;  // repeated sfixed32 sfixed32_field = 11;
  #sfixed64Field               ;  // repeated sfixed64 sfixed64_field = 12;
  #boolField                ;  // repeated bool bool_field = 13;
  #stringField               ;  // repeated string string_field = 14;
  #bytesField                   ;  // repeated bytes bytes_field = 15;
  /**
  * optional repeated double double_field = 1;
  * @return {Array<number>}
  */
  get doubleField()               {
    return this.#doubleField;
  }
  
  /** @param {Array<number>} val */
  set doubleField(val               )      {
    if (!val || Array.isArray(val)) {
      this.#doubleField = val;
    } else {
      throw new Error('Expected type Array<number> for field #doubleField');
    }
  }
  /**
  * optional repeated float float_field = 2;
  * @return {Array<number>}
  */
  get floatField()               {
    return this.#floatField;
  }
  
  /** @param {Array<number>} val */
  set floatField(val               )      {
    if (!val || Array.isArray(val)) {
      this.#floatField = val;
    } else {
      throw new Error('Expected type Array<number> for field #floatField');
    }
  }
  /**
  * optional repeated int32 int32_field = 3;
  * @return {Array<number>}
  */
  get int32Field()               {
    return this.#int32Field;
  }
  
  /** @param {Array<number>} val */
  set int32Field(val               )      {
    if (!val || Array.isArray(val)) {
      this.#int32Field = val;
    } else {
      throw new Error('Expected type Array<number> for field #int32Field');
    }
  }
  /**
  * optional repeated int64 int64_field = 4;
  * @return {Array<number>}
  */
  get int64Field()               {
    return this.#int64Field;
  }
  
  /** @param {Array<number>} val */
  set int64Field(val               )      {
    if (!val || Array.isArray(val)) {
      this.#int64Field = val;
    } else {
      throw new Error('Expected type Array<number> for field #int64Field');
    }
  }
  /**
  * optional repeated uint32 uint32_field = 5;
  * @return {Array<number>}
  */
  get uint32Field()               {
    return this.#uint32Field;
  }
  
  /** @param {Array<number>} val */
  set uint32Field(val               )      {
    if (!val || Array.isArray(val)) {
      this.#uint32Field = val;
    } else {
      throw new Error('Expected type Array<number> for field #uint32Field');
    }
  }
  /**
  * optional repeated uint64 uint64_field = 6;
  * @return {Array<number>}
  */
  get uint64Field()               {
    return this.#uint64Field;
  }
  
  /** @param {Array<number>} val */
  set uint64Field(val               )      {
    if (!val || Array.isArray(val)) {
      this.#uint64Field = val;
    } else {
      throw new Error('Expected type Array<number> for field #uint64Field');
    }
  }
  /**
  * optional repeated sint32 sint32_field = 7;
  * @return {Array<number>}
  */
  get sint32Field()               {
    return this.#sint32Field;
  }
  
  /** @param {Array<number>} val */
  set sint32Field(val               )      {
    if (!val || Array.isArray(val)) {
      this.#sint32Field = val;
    } else {
      throw new Error('Expected type Array<number> for field #sint32Field');
    }
  }
  /**
  * optional repeated sint64 sint64_field = 8;
  * @return {Array<number>}
  */
  get sint64Field()               {
    return this.#sint64Field;
  }
  
  /** @param {Array<number>} val */
  set sint64Field(val               )      {
    if (!val || Array.isArray(val)) {
      this.#sint64Field = val;
    } else {
      throw new Error('Expected type Array<number> for field #sint64Field');
    }
  }
  /**
  * optional repeated fixed32 fixed32_field = 9;
  * @return {Array<number>}
  */
  get fixed32Field()               {
    return this.#fixed32Field;
  }
  
  /** @param {Array<number>} val */
  set fixed32Field(val               )      {
    if (!val || Array.isArray(val)) {
      this.#fixed32Field = val;
    } else {
      throw new Error('Expected type Array<number> for field #fixed32Field');
    }
  }
  /**
  * optional repeated fixed64 fixed64_field = 10;
  * @return {Array<number>}
  */
  get fixed64Field()               {
    return this.#fixed64Field;
  }
  
  /** @param {Array<number>} val */
  set fixed64Field(val               )      {
    if (!val || Array.isArray(val)) {
      this.#fixed64Field = val;
    } else {
      throw new Error('Expected type Array<number> for field #fixed64Field');
    }
  }
  /**
  * optional repeated sfixed32 sfixed32_field = 11;
  * @return {Array<number>}
  */
  get sfixed32Field()               {
    return this.#sfixed32Field;
  }
  
  /** @param {Array<number>} val */
  set sfixed32Field(val               )      {
    if (!val || Array.isArray(val)) {
      this.#sfixed32Field = val;
    } else {
      throw new Error('Expected type Array<number> for field #sfixed32Field');
    }
  }
  /**
  * optional repeated sfixed64 sfixed64_field = 12;
  * @return {Array<number>}
  */
  get sfixed64Field()               {
    return this.#sfixed64Field;
  }
  
  /** @param {Array<number>} val */
  set sfixed64Field(val               )      {
    if (!val || Array.isArray(val)) {
      this.#sfixed64Field = val;
    } else {
      throw new Error('Expected type Array<number> for field #sfixed64Field');
    }
  }
  /**
  * optional repeated bool bool_field = 13;
  * @return {Array<boolean>}
  */
  get boolField()                {
    return this.#boolField;
  }
  
  /** @param {Array<boolean>} val */
  set boolField(val                )      {
    if (!val || Array.isArray(val)) {
      this.#boolField = val;
    } else {
      throw new Error('Expected type Array<boolean> for field #boolField');
    }
  }
  /**
  * optional repeated string string_field = 14;
  * @return {Array<string>}
  */
  get stringField()               {
    return this.#stringField;
  }
  
  /** @param {Array<string>} val */
  set stringField(val               )      {
    if (!val || Array.isArray(val)) {
      this.#stringField = val;
    } else {
      throw new Error('Expected type Array<string> for field #stringField');
    }
  }
  /**
  * optional repeated bytes bytes_field = 15;
  * @return {Array<Uint8Array>}
  */
  get bytesField()                   {
    return this.#bytesField;
  }
  
  /** @param {Array<Uint8Array>} val */
  set bytesField(val                   )      {
    if (!val || Array.isArray(val)) {
      this.#bytesField = val;
    } else {
      throw new Error('Expected type Array<Uint8Array> for field #bytesField');
    }
  }

  /**
  * Deserializes binary data (in protobuf wire format).
  * @param {Uint8Array} bytes The bytes to deserialize.
  * @return {!RepeatedPrimitiveTest}
  */
  static deserializeBinary(bytes            )                       {
    const reader = new jspb.BinaryReader(bytes);
    const msg = new RepeatedPrimitiveTest();
    return RepeatedPrimitiveTest.deserializeBinaryFromReader(msg, reader);
  }
  
  /**
  * Deserializes binary data (in protobuf wire format) from the
  * given reader into the given message object.
  * @param {!RepeatedPrimitiveTest} msg The message object to deserialize into.
  * @param {!jspb.BinaryReader} reader The BinaryReader to use.
  * @return {!RepeatedPrimitiveTest}
  */
  static deserializeBinaryFromReader (msg                       , reader              ) {
    while (reader.nextField()) {
      if (reader.isEndGroup()) {
        break;
      }
      let field = reader.getFieldNumber();
      switch (field) {
        case 1:
          msg.#doubleField = reader.readPackedDouble();
          break;
        case 2:
          msg.#floatField = reader.readPackedFloat();
          break;
        case 3:
          msg.#int32Field = reader.readPackedInt32();
          break;
        case 4:
          msg.#int64Field = reader.readPackedInt64();
          break;
        case 5:
          msg.#uint32Field = reader.readPackedUint32();
          break;
        case 6:
          msg.#uint64Field = reader.readPackedUint64();
          break;
        case 7:
          msg.#sint32Field = reader.readPackedSint32();
          break;
        case 8:
          msg.#sint64Field = reader.readPackedSint64();
          break;
        case 9:
          msg.#fixed32Field = reader.readPackedFixed32();
          break;
        case 10:
          msg.#fixed64Field = reader.readPackedFixed64();
          break;
        case 11:
          msg.#sfixed32Field = reader.readPackedSfixed32();
          break;
        case 12:
          msg.#sfixed64Field = reader.readPackedSfixed64();
          break;
        case 13:
          msg.#boolField = reader.readPackedBool();
          break;
        case 14:
          if (! msg.#stringField){
            msg.#stringField = []
          }
          msg.#stringField.push(reader.readString())
          break;
        case 15:
          if (! msg.#bytesField){
            msg.#bytesField = []
          }
          msg.#bytesField.push(reader.readBytes())
          break;
        default:
          reader.skipField();
          break;
        }
      }
      return msg;
    };

  /**
  * Serializes the message to binary data (in protobuf wire format).
  * @return {!Uint8Array}
  */
  serializeBinary()             {
    const writer = new jspb.BinaryWriter();
    RepeatedPrimitiveTest.serializeBinaryToWriter(this, writer);
    return writer.getResultBuffer();
  }
  
  /**
  * Serializes the given message to binary data (in protobuf wire
  * format), writing to the given BinaryWriter.
  * @param {!RepeatedPrimitiveTest} msg
  * @param {!jspb.BinaryWriter} writer
  * @suppress {unusedLocalVariables} f is only used for nested messages
  */
  static serializeBinaryToWriter(msg                       , writer              )             {
    if (msg.#doubleField && msg.#doubleField.length > 0){
      writer.writePackedDouble(1, msg.#doubleField); 
    }
    if (msg.#floatField && msg.#floatField.length > 0){
      writer.writePackedFloat(2, msg.#floatField); 
    }
    if (msg.#int32Field && msg.#int32Field.length > 0){
      writer.writePackedInt32(3, msg.#int32Field); 
    }
    if (msg.#int64Field && msg.#int64Field.length > 0){
      writer.writePackedInt64(4, msg.#int64Field); 
    }
    if (msg.#uint32Field && msg.#uint32Field.length > 0){
      writer.writePackedUint32(5, msg.#uint32Field); 
    }
    if (msg.#uint64Field && msg.#uint64Field.length > 0){
      writer.writePackedUint64(6, msg.#uint64Field); 
    }
    if (msg.#sint32Field && msg.#sint32Field.length > 0){
      writer.writePackedSint32(7, msg.#sint32Field); 
    }
    if (msg.#sint64Field && msg.#sint64Field.length > 0){
      writer.writePackedSint64(8, msg.#sint64Field); 
    }
    if (msg.#fixed32Field && msg.#fixed32Field.length > 0){
      writer.writePackedFixed32(9, msg.#fixed32Field); 
    }
    if (msg.#fixed64Field && msg.#fixed64Field.length > 0){
      writer.writePackedFixed64(10, msg.#fixed64Field); 
    }
    if (msg.#sfixed32Field && msg.#sfixed32Field.length > 0){
      writer.writePackedSfixed32(11, msg.#sfixed32Field); 
    }
    if (msg.#sfixed64Field && msg.#sfixed64Field.length > 0){
      writer.writePackedSfixed64(12, msg.#sfixed64Field); 
    }
    if (msg.#boolField && msg.#boolField.length > 0){
      writer.writePackedBool(13, msg.#boolField); 
    }
    if (msg.#stringField && msg.#stringField.length > 0){
      writer.writeRepeatedString(14, msg.#stringField); 
    }
    if (msg.#bytesField && msg.#bytesField.length > 0){
      writer.writeRepeatedBytes(15, msg.#bytesField); 
    }
  }
}
module.exports.RepeatedPrimitiveTest = RepeatedPrimitiveTest;
